--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <h1 style="background-color:Olive;text-align:Center">看图猜成语~</h1>
 <div class="container" align="center">
-  <img src="puzzlegood.jpg"
+  <img src="pics/puzzlegood.jpg"
   width="300"
   height="300">
 <p>看上边这张图！成语！四个字！猜吧！</p>
